--- a/shop/jsconfig.json
+++ b/shop/jsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["*"]
+    },
+    "ignoreDeprecations": "6.0"
   },
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*"]
 }
